Improved Background on mobile Devices Started My-Stack Page Fixed Order-Problems on aboutme.html

--- a/style/aboutme.css
+++ b/style/aboutme.css
@@ -1,20 +1,21 @@
 .top-box {
-	background: no-repeat bottom
+	background: no-repeat top
 		url('../img/wallpapertip_innovation-wallpaper-hd_425586.jpg');
 	background-size: cover;
 	height: 100vh;
+	width: 100vw;
+	position: fixed;
 }
 
-.box {
-	padding-top: 5%;
-}
 .box-shadow {
 	background-color: rgba(255, 255, 255, 0.4);
 }
 .about {
 	display: block;
-	padding-top: 5rem;
 	font-size: 2rem;
+	position: relative;
+	margin: 0;
+	padding-top: 20%;
 }
 
 .aboutme-past {
@@ -81,7 +82,8 @@
 	}
 
 	.about {
-		padding: 1rem 0;
+		padding-top: 7rem;
+		padding-bottom: 2rem;
 		font-size: 2rem;
 	}
 
@@ -102,7 +104,6 @@
 
 @media (min-width: 1440px) {
 	.about {
-		padding-top: 1rem;
 		font-size: 2rem;
 	}
 
