--- a/style/shared.css
+++ b/style/shared.css
@@ -318,7 +318,7 @@ div {
 	}
 
 	.case-law {
-		width: 13%;
+		width: 10%;
 	}
 }
 
